Updated tvmc parser to add connection index variable for multi sim support

--- a/tvmc/README
+++ b/tvmc/README
@@ -35,6 +35,9 @@ Value: The message ID associated with particular "instance" of a CFS data type
 Key: "flowDirection"
 Value: An integer type that can be 1, 2, or 3.  If this is set to 1, this mapping only applies to data flowing from Trick to CFS.  If this is set to 2, this mapping only applies to data flowing from CFS to Trick.  If this is set to 3, then this mapping is "bi-directional" and applies to data flowing in either direction betweeen CFS and Trick.
 
+Key: "connectionIndex" (optional, default=0, only use if there are multiple trick simulations with which to transfer data)
+Value: zero based index to indicate which trick sim connection a structure is tied with. The index should correspond to the trick variable server IP and port (TVS_SERVER_IPS, TVS_SERVER_PORTS) defined in tvs_io_platform_cfg.h 
+
 Key: "commandCode" (optional and only used for mappings with a CCSDS Telecommand Message ID)
 Value: If supplied, the command code will be coupled with a particular message ID to uniquely identify a particular mapping.
 
